@startuml
abstract class Vehiculo {
  #disponible: boolean
  +isDisponible(): boolean
  +setDisponible(disponible: boolean): void
}

class Bicicleta extends Vehiculo {
}

class Monopatin extends Vehiculo {
}

class Usuario {

    +alquilarVehiculo(vehiculo: Vehiculo, cantidadDias: int): void
    +devolverVehiculo(): void

}

class Alquiler {
    -usuario: Usuario
    -vehiculo: Vehiculo

}

class SMU << (S,#FF7700) Singleton >> {
    +getVehiculosDisponibles(): Vehiculo[]
    +getAlquileresActivos(): Alquiler[]
    +registrarAlquiler(usuario: Usuario, vehiculo: Vehiculo, cantidadDias: int): void
    +terminarAlquiler(usuario: Usuario, vehiculo: Vehiculo): void

}

'=== RELACIONES ==='
SMU "1" --> "*" Alquiler : registra
SMU "1" --> "*" Vehiculo : registra
Alquiler ---> Usuario : registra
Alquiler ---> Vehiculo : registra
Usuario ..> SMU : utiliza

@enduml
